# ai-chat-design-studio

./: .gitignore  CORS_FIX.md  DEBUG_EMAIL.md  DISABLE_SUPABASE_EMAIL.md  EMAIL_SETUP.md  EMAIL_VERIFICATION_FIX.md  FIX_GOOGLE_OAUTH_REDIRECT.md  README.md  SIGNUP_TIMEOUT_FIX.md  TAURI_SETUP.md  TROUBLESHOOT_EMAIL_VERIFICATION.md  bun.lockb  fix-email-confirmation-rls.sql  fix-email-verification-rls.sql  index.html  netlify.toml  package-lock.json  package.json  supabase-email-confirmation.sql  supabase-setup.sql  tailwind.config.ts  vite.config.ts
netlify/functions/: delete-account.ts  send-confirmation-email.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  icon.icns
src/components/chat/: ChatWindow.tsx  EditProfileModal.tsx  HelpCenterModal.tsx  InputBar.tsx  KeyboardShortcutsModal.tsx  LoginModal.tsx  MessageBubble.tsx  ModelSelector.tsx  ProjectsModal.tsx  SearchModal.tsx  SettingsModal.tsx  Sidebar.tsx  SignUpModal.tsx  TermsAndPoliciesModal.tsx  UpgradePlanModal.tsx
src/components/ui/: dropdown-menu.tsx
src/contexts/: AccentColorContext.tsx  AuthContext.tsx  ChatContext.tsx  KeyboardShortcutsContext.tsx  TranslationContext.tsx
src/hooks/: use-keyboard-shortcuts.ts  use-notifications.ts
src/lib/: languageDetection.ts  supabaseChat.ts
src/pages/: ConfirmEmail.tsx  Index.tsx
src/types/: chat.ts
