[package]
name = "ai-chat-design-studio"
version = "0.0.0"
description = "A beautiful, ChatGPT-style AI chatbot interface"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-exists", "fs-read-dir", "window-show", "fs-read-file", "fs-rename-file", "window-start-dragging", "window-maximize", "window-unminimize", "fs-create-dir", "fs-write-file", "fs-copy-file", "fs-remove-file", "window-unmaximize", "window-minimize", "window-hide", "http-all", "window-close", "fs-remove-dir", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]


